[package]
name = "rust_snake"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winopengl = { path = "../winopengl"}
winapi = { version = "0.3", features = ["winuser"] }
rand = "0.8.5"
webp = "0.2.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true